file/1.3/modules/ROOT/pages/file-troubleshooting.adoc
= Troubleshoot File Connector - Mule 4

To troubleshoot Anypoint Connector for File (File Connector), become familiar with the information about troubleshooting Mule application issues.

== Troubleshoot Mule Application Issues

Sometimes you are not sure why the application is failing and you require a better understanding of what is going on in the app's interaction with the File system.

To resolve this error:

* Use the configuration file to increase the logging level on the server side.

* Try to replicate the issue using a File client, for example, Cyberduck or Filezilla. If the issue also occurs with these clients, then it is likely that the issue is not related to the Mule app.

* Get better and more detailed logs on the Mule app side by enabling verbose logging for File Connector and for the JSCH driver:
+
. Access Anypoint Studio and navigate to the *Package Explorer* view.
. Open your application's project name.
. Open the `src/main/resources` path folder.
. Open the `log4j2.xml` file inside the folder.
. If the following line is already in the `log4j2.xml` file, uncomment it to enable it; otherwise, add it:
+
[source,xml,linenums]
----
    <AsyncLogger name=“org.mule.extension.file” level=“TRACE”/>
----
[start=6]
. Add the following argument to your run configuration:
+
 `-M-Djavax.net.debug=ssl,handshake`

* Try to minimize or remove unnecessary DataWeave data transformations (you could even use hard coded data) to minimize the app's complexity and determine whether the issue is with the interaction between the app and the File system.

For additional information about enabling verbose logging for SDK components in your Mule application, see the xref:mule-sdk::troubleshooting.adoc[troubleshoot SDK components] documentation.

== Understand Common Throws

Here is a list of common throw messages and how to interpret them.

* FILE:CONNECTIVITY

The connection is no longer valid. It is disposed of, but you can apply a reconnection policy if defined in the application setup.

* FILE:ILLEGAL_PATH

If the *createParentDirectories* property is set to false and the target path doesn’t exist, and neither does its parent,
then a FILE:ILLEGAL_PATH error is thrown.

* FILE:FILE_ALREADY_EXISTS

If the *overwrite* property is set to false and the target file already exists, then a FILE:FILE_ALREADY_EXISTS error is thrown.

* FILE:RETRY_EXHAUSTED

The maximum number of retries for the operation is reached.

* FILE:ACCESS_DENIED

A File Connector operation attempted to access a file or a path and performed an action for which the user has not been granted permission.

* FILE:FILE_LOCK

An operation made an unsuccessful attempt to acquire a lock over a file.

* FILE:ILLEGAL_CONTENT

The Write operation received invalid content to write.


== See Also
* https://help.mulesoft.com[MuleSoft Help Center]
* xref:file-documentation.adoc[File Connector Reference]
