file/1.4/modules/ROOT/pages/file-troubleshooting.adoc
= Troubleshooting File Connector - Mule 4

To troubleshoot Anypoint Connector for File (File Connector), become familiar with the information about troubleshooting Mule application issues.

== Troubleshoot Mule Application Issues

Sometimes you are not sure why the application is failing and you require a better understanding of what is going on in the app's interaction with the File system.

To resolve this error:

* Use the configuration file to increase the logging level on the server side.

* Try to replicate the issue using a File client, for example, Cyberduck or Filezilla. If the issue also occurs with these clients, then it is likely that the issue is not related to the Mule app.

* Get better and more detailed logs on the Mule app side by enabling verbose logging for File Connector and for the JSCH driver:
+
. Access Anypoint Studio and navigate to the *Package Explorer* view.
. Open your application's project name.
. Open the `src/main/resources` path folder.
. Open the `log4j2.xml` file inside the folder.
. If the following line is already in the `log4j2.xml` file, uncomment it to enable it; otherwise, add it:
+
[source,xml,linenums]
----
    <AsyncLogger name=“org.mule.extension.file” level=“TRACE”/>
----
[start=6]
. Add the following argument to your run configuration:
+
 `-M-Djavax.net.debug=ssl,handshake`

* Try to minimize or remove unnecessary DataWeave data transformations (you could even use hard coded data) to minimize the app's complexity and determine whether the issue is with the interaction between the app and the File system.

For additional information about enabling verbose logging for SDK components in your Mule application, see the xref:mule-sdk::troubleshooting.adoc[Troubleshooting SDK components] documentation.

== Troubleshooting Out Of Memory with Repeatable File Store Iterable

In some cases where the file folder contains large files, and you set the *Streaming strategy* field to the *Repeatable file store iterable (Default)* option for the *List* operation, it can cause the Mule application to throw a `java.lang.OutOfMemoryError` message.

To avoid this issue, set the *Streaming strategy* field from *Repeatable file store iterable (Default)* to the *No repeatable iterable* option.

For additional information about repeatable file store, refer to the xref:mule-runtime::tuning-repeatable-nonrepeatable.adoc#file-store-repeatable-stream[File Store Repeatable] documentation.

For additional information about disabling repeatable streaming, refer to the xref:mule-runtime::streaming-about.adoc#disable_repeatable_streaming[Disable repeatable streaming] documentation.


== Understand Common Throws

Here is a list of common throw messages and how to interpret them:

* FILE:CONNECTIVITY

The connection to the file server is no longer valid. Apply a reconnection policy if defined in the application setup.

* FILE:ILLEGAL_PATH

The *createParentDirectories* property is set to `false` and neither the target path nor its parent exists.

* FILE:FILE_ALREADY_EXISTS

The target file already exists and the *overwrite* property is set to `false`.

* FILE:RETRY_EXHAUSTED

The maximum number of retries for the operation is reached.

* FILE:ACCESS_DENIED

A File Connector operation attempted to access a file or a path and performed an action for which the user does not have permission.

* FILE:FILE_LOCK

An attempt to lock a file was unsuccessful.

* FILE:ILLEGAL_CONTENT

The *Write* operation received invalid content to write.


== See Also
* https://help.mulesoft.com[MuleSoft Help Center]
* xref:file-documentation.adoc[File Connector Reference]
